<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="actualWine"
            type="com.wineguesser.deductive.viewmodel.VarietyResultsViewModel" />

        <variable
            name="inputError"
            type="com.wineguesser.deductive.viewmodel.ConclusionInputErrorsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_app_variety_guess"
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/large_margin"
                    android:text="@{actualWine.appVariety}" />

                <TextView
                    android:id="@+id/text_user_variety_guess"
                    style="@style/AppTheme.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/large_margin"
                    android:text="@{actualWine.userVariety}" />

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_label"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@+id/autoText_actual_label"
                        android:text="@string/vr_actual_label" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_label"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={actualWine.actualLabel}" />

                    <TextView
                        android:id="@+id/textError_label"
                        style="@style/AppTheme.Text.Error"
                        android:text="@{inputError.errorLabel}"
                        android:visibility="@{inputError.errorLabel != null ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_variety"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@id/autoText_actual_variety"
                        android:text="@string/grape_variety_blend" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_variety"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={actualWine.actualVariety}" />

                    <TextView
                        android:id="@+id/textError_variety"
                        style="@style/AppTheme.Text.Error"
                        android:text="@{inputError.errorVariety}"
                        android:visibility="@{inputError.errorVariety != null ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_country"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@id/autoText_actual_country"
                        android:text="@string/country_of_origin" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_country"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={actualWine.actualCountry}" />

                    <TextView
                        android:id="@+id/textError_country"
                        style="@style/AppTheme.Text.Error"
                        android:text="@{inputError.errorCountry}"
                        android:visibility="@{inputError.errorCountry != null ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_region"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@id/autoText_actual_region"
                        android:text="@string/region_appellation" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_region"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={actualWine.actualRegion}" />

                    <TextView
                        android:id="@+id/textError_region"
                        style="@style/AppTheme.Text.Error"
                        android:text="@{inputError.errorRegion}"
                        android:visibility="@{inputError.errorRegion != null ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_quality"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@id/autoText_actual_quality"
                        android:text="@string/quality_regional_hierarchy" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_quality"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="25"
                        android:singleLine="true"
                        android:text="@={actualWine.actualQuality}" />

                </LinearLayout>

                <LinearLayout style="@style/SelectionGroupContainer">

                    <TextView
                        android:id="@+id/textView_actual_vintage"
                        style="@style/AppTheme.Text.Descriptor"
                        android:labelFor="@+id/autoText_actual_vintage"
                        android:text="@string/vintage" />

                    <AutoCompleteTextView
                        android:id="@+id/autoText_actual_vintage"
                        style="@style/AppTheme.AutoText.Single"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true"
                        android:text="@={actualWine.actualVintage}" />

                    <TextView
                        android:id="@+id/textError_vintage"
                        style="@style/AppTheme.Text.Error"
                        android:text="@{inputError.errorVintage}"
                        android:visibility="@{inputError.errorVintage != null ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_wine_result_save"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onButtonWineResultSave"
                    android:text="@{actualWine.resultButtonText}" />

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
