...
    <string name="button_delete_account">Delete Account</string>
    <string name="placeholder_wine_variety">Wine Variety</string>
    <string name="placeholder_user_conclusion">User Conclusion</string>
    <string name="placeholder_app_conclusion">App Conclusion</string>

    <!-- Errors -->
    <string name="error_input_country_origin">Please input a valid country of origin.</string>
    <string name="error_input_valid_grape">Please input a valid primary grape variety.</string>
    <string name="error_input_valid_region">Please input a valid region/appellation.</string>
    <string name="error_input_valid_vintage">Please input a valid vintage. (1900 - Present)</string>
    <string name="error_input_valid_label">Please input a wine label.</string>

    <string name="form_cleared">Form Cleared!</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="history_cleared">History Cleared!</string>
    <string name="remove_record">Remove Record</string>
...
